--- a/css/styles_categories.css
+++ b/css/styles_categories.css
@@ -1,30 +1,32 @@
 .content-title {
-    margin: 40px auto 40px 60px;
+    min-width: 555px;
+    margin: 40px;
     padding: 20px;
-    color: #ffffff;
+    color: var(--bg-color-black);
 }
 .content-title h1 {
+    width: 100%;
     text-align: center;
     font-size: 3rem;
     font-weight: 700;
-    /* text-decoration: underline #00aee7; */
 }
 .content-title>p {
+    width: 100%;
     text-align: center;
     font-style: italic;
     font-weight: 300;
     font-size: 120%;
-    padding: 40px 100px 5px 0;
+    padding: 40px;
+    color: var(--bg-color-black);
 }
 #gems {
     display: flex;
     flex-wrap: wrap;
-    min-width: 690px;
+    min-width: fit-content;
     height: min-content;
     align-content: space-around;
     justify-content: space-around;
-    margin: auto 70px;
-    padding: 0 25px 0 35px;
+    padding: 0 30px 30px 30px;
 }
 .gem {
     min-width: 300px;
@@ -32,25 +34,25 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin: 40px 20px;
+    margin: 40px;
     padding: 20px;
     border-radius: 20px;
-    background-color: #292929;
+    background-color: var(--color-black);
 }
 .gem>a {
     text-decoration: none;
 }
 .gem-name {
-    color: #ffffff;
+    color: var(--color-white);
     font-weight: 700;
     font-size: 1.3rem;
     padding: 10px 0;
 }
 .gem-origin {
-    color:white;
+    color: var(--color-white);
 }
 .gem-price {
-    color: #eb7f2d;
+    color: var(--color-orange);
     padding: 7px 0;
 }
 .gem img  {
@@ -59,9 +61,9 @@
 }
 .gem:hover {
     cursor: pointer;
-    transition: 0.3s ease-in;
-    transform: scale(1.01);
-    filter: drop-shadow(0px 0px 10px #00ade788);
+    transition: 0.3s ease;
+    transform: scale(1.05);
+    filter: drop-shadow(0px 0px 15px var(--color-white));
 }
 #geode-img {
     background-image: url("/img/indeximg1.jpg");
@@ -86,7 +88,7 @@
     height: 50px;
     margin-left: 20%;
     background-color: rgba(0, 0, 0, 0.3);
-    border: 2px solid white;
+    border: 2px solid  var(--color-white);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -96,7 +98,7 @@
 .index-img-button>a {
     width: 100%;
     text-align: center;
-    color: whitesmoke;
+    color:  var(--color-white);
     font-weight: 600;
     font-size: x-large;
     text-decoration: none;
