add: backoffice - add item; fix: price in gem page, xml change customer data

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 }
 :root {
     --color-white: #ffffff;
-    --color-cream: #ebd5bd;
+    --color-cream: #e1c2a2;
     --color-black: #292929;
     --color-grey: #3f3f3f;
     --color-lightgrey: #505050;
